Create Form and update DB

--- a/EZBank.csproj
+++ b/EZBank.csproj
@@ -54,6 +54,12 @@
     <Compile Include="Interfaces\IDBServerConnection.cs" />
     <Compile Include="Interfaces\IDBServerConnectionFactory.cs" />
     <Compile Include="Interfaces\ISession.cs" />
+    <Compile Include="UI\CreateTransaction.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\CreateTransaction.Designer.cs">
+      <DependentUpon>CreateTransaction.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -77,6 +83,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="UI\CreateTransaction.resx">
+      <DependentUpon>CreateTransaction.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UI\Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
