Create Account Creation Form and Logic

--- a/EZBank.csproj
+++ b/EZBank.csproj
@@ -60,6 +60,12 @@
     <Compile Include="Interfaces\IDBServerConnection.cs" />
     <Compile Include="Interfaces\IDBServerConnectionFactory.cs" />
     <Compile Include="Interfaces\ISession.cs" />
+    <Compile Include="UI\CreateAccount.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\CreateAccount.Designer.cs">
+      <DependentUpon>CreateAccount.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\CreateTransaction.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -89,6 +95,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="UI\CreateAccount.resx">
+      <DependentUpon>CreateAccount.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UI\CreateTransaction.resx">
       <DependentUpon>CreateTransaction.cs</DependentUpon>
     </EmbeddedResource>
